# PandoraTrader

./: .gitignore  CMakeLists.txt  PandoraTrader.sln  PandoraTrader_Linux.sln  README.md  frame.txt  to_dolist.txt
.github/workflows/: build.yml
Interface/CTPTradeApi32/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  thostmduserapi_se.lib  thosttraderapi_se.lib
Interface/CTPTradeApi64/: ThostFtdcUserApiStruct.h  thostmduserapi.lib  thostmduserapi_se.lib  thosttraderapi.lib  thosttraderapi_se.lib  版本.txt
Interface/CTPTradeApiLinux/: ThostFtdcTraderApi.h  error.xml
Interface/CTPTradeApiMacOS/: README.txt  error.xml
Interface/CTPTradeApiMacOS/thostmduserapi_se.framework/Headers/: ThostFtdcUserApiDataType.h
Interface/CTPTradeApiMacOS/thostmduserapi_se.framework/Versions/A/Headers/: ThostFtdcMdApi.h
Interface/CTPTradeApiMacOS/thosttraderapi_se.framework/Headers/: ThostFtdcUserApiStruct.h
Interface/include/: cwAgentManager.h  cwAutoCriticalSection.h  cwAutoMutex.h  cwBasicAgent.h  cwBasicCout.h  cwBasicKindleStrategy.h  cwBasicMdSpi.h  cwBasicSimulator.h  cwBasicStrategy.h  cwBasicTradeSpi.h  cwCalendar.h  cwChinaTradingCalendar.h  cwCommonUtility.h  cwCriticalSection.h  cwDate.h  cwFemasMdSpi.h  cwFemasTradeSpi.h  cwFtdMdSpi.h  cwFtdTradeSpi.h  cwInterfaceDefine.h  cwKindleStick.h  cwKindleStickSeries.h  cwLog.h  cwMarketTime.h  cwMutex.h  cwNetValueEvaluation.h  cwOrderReference.h  cwPegasusSimulator.h  cwProductTradeTime.h  cwSettlement.h  cwSimMdSpi.h  cwSimTradeSpi.h  cwStrategyLog.h  cwTickTradeManager.h  cwTimeStamp.h  cwTradeCommonDefine.h  cwTradeLog.h  cwVersion.h
Interface/lib/Debug/: tinyxml.lib
Interface/lib/Release/: tinyxml.bsc  tinyxml.lib
Interface/lib/X64/Debug/: tinyxml.lib
Interface/lib/X64/Release/: tinyxml.lib
PandoraSimulator/: CMakeLists.txt  HisMarketDataIndex.xml  PandoraSimulator.cpp  PandoraSimulator.vcxproj  PandoraSimulator.vcxproj.filters  PandoraSimulatorConfig.xml  PegasusSimulatorConfig.xml  cwStrategyDemo.cpp
PandoraStrategy/: CMakeLists.txt  CTAPlatformConfig.xml  Class1.cpp  Class1.h  IndayStrategy.hpp  MyStructs.h  My_structs.h  PandoraStrategy.vcxproj  PandoraStrategy.vcxproj.filters  SQLiteHelp.hpp  SqlliteHelp.cpp  SqlliteHelp.h  Strformatdate.cpp  Strformatdate.h  Utils.hpp  csvparser.h  cwBasicCTAStrategy.cpp  cwBasicCTAStrategy.h  cwCTAPlatform.cpp  cwCTAPlatform.h  cwChasingRisingStrategy.cpp  cwChasingRisingStrategy.h  cwChasingRisingStrategy.xml  cwDualTrust.cpp  cwDualTrust.h  cwEmptyStrategy.cpp  cwEmptyStrategy.h  cwMarKetDataReceiverToLocalKindle.cpp  cwMarKetDataReceiverToLocalKindle.h  cwMarketDataReceiver.cpp  cwMarketDataReceiver.h  cwNetValueEvaluation.cpp  cwNetValueEvaluation.h  cwPandoraAgentManager.cpp  cwPandoraAgentManager.h  cwPandoraPairTrading.cpp  cwPandoraPairTrading.h  cwPandoraPositionAgent.cpp  cwPandoraPositionAgent.h  cwStrategyCommon.cpp  (+4 more)
PandoraStrategy/x64/Debug/PandoraStrategy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PandoraStrategy.lastbuildstate
PandoraStrategy/x64/Release/PandoraStrategy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PandoraStrategy.lastbuildstate
PandoraTrade/: CMakeLists.txt  Instrument.xml  PandoraDemoStrategyTrader.cpp  PandoraTrader.vcxproj  PandoraTraderConfig.xml  PandoraTrader_Linux.vcxproj  PegasusTraderConfig.xml  ReadMe.txt  cwStrategyDemo.cpp  cwStrategyDemo.h  dm.db  stdafx.cpp
PandoraTrade/x64/Debug/: PandoraTrader.exe.recipe  vc143.idb
PandoraTrade/x64/Debug/PandoraTrader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PandoraTrade/x64/Release/: PandoraTrader.exe.recipe  PandoraTrader.iobj  PandoraTrader.ipdb
PandoraTrade/x64/Release/PandoraTrader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tools/: MarketData_20231201_204501 - demo.csv  PandoraTraderConfig.xml  说明.txt
Tools/Centos/: KindleGenerator.out  MarketDataReceiver.out  PandoraTraderConfig.xml  说明.txt
cwStrategys/include/: cwMarketDataBinaryReceiver.h  cwMarketDataReceiver.h  cwPegasusSimulator.h
doc/: PandoraTrader用户手册.doc  cwFtdMdSpiDemo.cpp  cwFtdMdSpiDemo.h  cwFtdTradeSpiDemo.cpp  cwFtdTradeSpiDemo.h
x64/Debug/: PandoraStrategy.idb  PandoraStrategy.lib  PandoraTraderConfig.xml  TradingSession.xml
x64/Debug/Quotes/1/: TradingDay.con
x64/Debug/Trade/: TradeLog_20250420_165332.csv  TradeLog_20250422_234025.csv  TradeLog_20250422_234731.csv  TradeLog_20250422_235301.csv  TradeLog_20250422_235341.csv  TradeLog_20250422_235421.csv  TradeLog_20250422_235713.csv  TradeLog_20250422_235802.csv  TradeLog_20250422_235852.csv  TradeLog_20250423_000005.csv  TradeLog_20250423_000215.csv  TradeLog_20250423_000453.csv  TradeLog_20250423_000551.csv  TradeLog_20250423_000722.csv  TradeLog_20250423_000857.csv  TradeLog_20250423_001113.csv  TradeLog_20250423_001222.csv  TradeLog_20250423_001258.csv  TradeLog_20250423_001326.csv  TradeLog_20250423_001405.csv  TradeLog_20250423_001558.csv  TradeLog_20250423_001615.csv  TradeLog_20250423_001628.csv  TradeLog_20250423_001646.csv  TradeLog_20250423_001738.csv  TradeLog_20250423_001841.csv  TradeLog_20250423_001909.csv  TradeLog_20250423_001933.csv  TradeLog_20250423_002015.csv  TradeLog_20250423_094813.csv  TradeLog_20250423_095715.csv  TradeLog_20250423_170047.csv  TradeLog_20250423_170243.csv  TradeLog_20250423_171405.csv  TradeLog_20250424_141543.csv  TradeLog_20250424_153710.csv  TradeLog_20250424_154029.csv  TradeLog_20250424_154720.csv  TradeLog_20250424_160259.csv  TradeLog_20250424_161134.csv  (+3 more)
x64/Debug/Trade/1/: Private.con  Public.con  QueryRsp.con  TradingDay.con
x64/Release/Trade/: TradeLog_20250422_232549.csv  TradeLog_20250422_232723.csv
x64/Release/Trade/1/: Public.con  QueryRsp.con
(+5 files in other folders)
